# Course_7

./: .env.sample  .env.template  .env_sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  habits_data.json  pyproject.toml  requirements.txt  users_data.json
apps/coverage/: index.html
apps/habits/: apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
apps/habits/migrations/: 0001_initial.py  0002_alter_habit_owner.py  0002_initial.py  0003_alter_habit_eta_alter_habit_frequency.py  0003_alter_habit_reward.py  0004_alter_habit_place.py
apps/users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0002_user_chat_id.py  0003_alter_user_chat_id.py  0003_user_chat_id.py  0004_alter_user_chat_id.py
config/: settings.py  urls.py
flake-report/: index.html
spa_web/: apps.py  asgi.py  models.py  paginators.py  serializers.py  validators.py  views.py
spa_web/migrations/: 0001_initial.py  0002_rename_is_related_habit_related.py  0003_alter_habit_duration_alter_habit_period.py
spa_web/spa_web/: models.py  permissions.py  serializers.py  settings.py  tasks.py  tests.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py
